<resources>
    <string name="app_name">Miwok App</string>
    <string name="app_name_login">Miwok App Login</string>
    <string name="app_name_register">Miwok App Registration</string>
    <string name="category_name_numbers">Numbers Category</string>
    <string name="category_family_members">Family Members Category</string>
    <string name="category_colors">Colors Category</string>
    <string name="phrases_category">Phrases Category</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Email ... </string>
    <string name="password_hint">Password ... </string>
    <string name="loading_message">Loading ...</string>
    <string name="error_message">Sorry ! Error occured </string>
    <string name="login_failed">Sorry ! Cant login right now </string>
    <string name="fill_feilds">You have to fill all fields</string>
    <string name="translateToGermanLabel">Translate To German</string>
    <string name="downloadImageLabel">Downlaod Image</string>
    <string name="click_to_play">Click On This Word To Play Sounds</string>
    <string name="savedTranslates">My Saved Translates</string>
    <string name="cantTranslateemptyValue">Cant Translate Empty Value</string>
    <string name="hint_for_inputs">Type Value</string>
    <string name="button_translate_action">Translate</string>
    <string name="button_save_action">Save Translate</string>
    <!--numbers -->
    <string name="english_number_one">one</string>
    <string name="english_number_two">Two</string>
    <string name="english_number_three">Three</string>
    <string name="english_number_four">Four</string>
    <string name="english_number_five">Five</string>
    <string name="english_number_six">Six</string>
    <string name="english_number_seven">Seven</string>
    <string name="english_number_eight">Eight</string>
    <string name="english_number_nine">Nine</string>
    <string name="english_number_ten">Ten</string>
    <string name="miwok_number_one">eins</string>
    <string name="miwok_number_two">zwei</string>
    <string name="miwok_number_three">drei</string>
    <string name="miwok_number_four">vier</string>
    <string name="miwok_number_five">fünf</string>
    <string name="miwok_number_six">sechs</string>
    <string name="miwok_number_seven">sieben</string>
    <string name="miwok_number_eight">acht</string>
    <string name="miwok_number_nine">neun</string>
    <string name="miwok_number_ten">zehn</string>
    <!-- colors -->
    <string name="english_color_red">Red </string>
    <string name="english_color_green">Green </string>
    <string name="english_color_brown">Brown</string>
    <string name="english_color_gray">Gray </string>
    <string name="english_color_black">Black </string>
    <string name="english_color_white">White </string>
    <string name="english_color_dustyyellow">Dusty Yellow</string>
    <string name="english_color_mustardyellow">Mustard Yellow  </string>
    <string name="miwok_color_red">Rot</string>
    <string name="miwok_color_green">Grün</string>
    <string name="miwok_color_brown">Braun</string>
    <string name="miwok_color_gray">Grau</string>
    <string name="miwok_color_black">Schwarz</string>
    <string name="miwok_color_white">weiß</string>
    <string name="miwok_color_dustyyellow">blond</string>
    <string name="miwok_color_mustardyellow">Gelb</string>
    <!-- phrases -->
    <string name="english_phrase_1">"Where are you going?</string>
    <string name="english_phrase_2">What is your name ? </string>
    <string name="english_phrase_3">My name is...</string>
    <string name="english_phrase_4">How are you feeling ? </string>
    <string name="english_phrase_5">I’m feeling good.</string>
    <string name="english_phrase_6">Are you coming?</string>
    <string name="english_phrase_7">Yes, I’m coming.</string>
    <string name="english_phrase_8">I’m coming.</string>
    <string name="english_phrase_9">Let’s go.</string>
    <string name="english_phrase_10">Come here.</string>
    <string name="miwok_phrase_1">Wohin gehst du?</string>
    <string name="miwok_phrase_2">Wie heißen Sie?</string>
    <string name="miwok_phrase_3">Mein Name ist...</string>
    <string name="miwok_phrase_4">Wie fühlst du dich?</string>
    <string name="miwok_phrase_5">Ich fühle mich gut</string>
    <string name="miwok_phrase_6">Kommst du?</string>
    <string name="miwok_phrase_7">Ja,Ich werde kommen</string>
    <string name="miwok_phrase_8">Ich werde kommen</string>
    <string name="miwok_phrase_9">Lass uns gehen</string>
    <string name="miwok_phrase_10">Komm her</string>
    <!-- family -->
    <string name="english_family_father">Father</string>
    <string name="english_family_mother">Mother</string>
    <string name="english_family_son">Son</string>
    <string name="english_family_daughter">Daughter</string>
    <string name="english_family_olderborther">Older brother</string>
    <string name="english_family_youngerbrother">Younger Brother</string>
    <string name="english_family_oldersister">Older Sister</string>
    <string name="english_family_youngersister">Younger Sister</string>
    <string name="english_family_grandmother">Grandmother</string>
    <string name="english_family_grandfather">Grandfather</string>
    <string name="miwok_family_father">Vater</string>
    <string name="miwok_family_mother">Mutter</string>
    <string name="miwok_family_son">Sohn</string>
    <string name="miwok_family_daughter">Tochter</string>
    <string name="miwok_family_olderborther">Älterer Bruder</string>
    <string name="miwok_family_youngerbrother">Jüngerer Bruder</string>
    <string name="miwok_family_oldersister">ältere Schwester</string>
    <string name="miwok_family_youngersister">jüngere Schwester</string>
    <string name="miwok_family_grandmother">Oma</string>
    <string name="miwok_family_grandfather">Opa</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
