<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/entword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_for_inputs"
            android:contentDescription="@string/hint_for_inputs"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/viewword"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:textSize="20dp"
            android:contentDescription="@string/loading_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_translate_action"
            android:contentDescription="@string/button_translate_action"
            android:textSize="15dp"
            android:onClick="translate"
             />
        <Button
            android:id="@+id/saveTranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_action"
            android:contentDescription="@string/button_save_action"
            android:onClick="saveTranslate"
            android:textSize="15dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>