<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
<RelativeLayout
    android:id="@+id/main_elements_wrapper"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/click_to_play"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        />
    <ImageView
        android:id="@+id/play_audio"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/play_button"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/miwok_text_view"
        android:layout_toEndOf="@id/item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/miwok_number_one"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/default_text_view"
        android:layout_width="match_parent"
        android:layout_toEndOf="@id/item_image"
        android:layout_below="@id/miwok_text_view"
        android:layout_height="wrap_content"
        tools:text="@string/english_number_one"
        android:padding="8dp"/>

</RelativeLayout>

</LinearLayout>
